--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,25 @@
 Package: gmsp
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Ground Motion Signal Processing Tools
+Version: 0.0.1.0000
+Authors@R: 
+    person("Alejandro", "Verri Kozlowski", , "averri@fi.uba.ar", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-8535-1170"))
+Description: Description
+License: file LICENSE
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
+Imports:
+    data.table,
+    pracma,
+    seewave,
+    signal,
+    stringr,
+    purrr,
+    digest
+Depends: 
+    R (>= 3.5)
 LazyData: true
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
