--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(getVDA)
 import(data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(digest,digest)
 importFrom(pracma,detrend)
 importFrom(purrr,map)
+importFrom(seewave,ffilter)
 importFrom(seewave,istft)
 importFrom(seewave,stdft)
 importFrom(signal,resample)
