--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(buildTS)
 export(getIM)
 import(data.table)
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(digest,digest)
