--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ import(data.table)
 importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
+importFrom(data.table,melt)
 importFrom(digest,digest)
 importFrom(pracma,detrend)
 importFrom(purrr,map)
@@ -15,5 +16,6 @@ importFrom(seewave,stdft)
 importFrom(signal,resample)
 importFrom(spectral,spec.fft)
 importFrom(stats,fft)
+importFrom(stats,na.omit)
 importFrom(stringr,str_split)
 importFrom(utils,tail)
