--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ importFrom(stats,fft)
 importFrom(stats,na.omit)
 importFrom(stringr,str_split)
 importFrom(utils,tail)
+importFrom(xplot,plot.highchart)
