--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ Imports:
     purrr,
     digest,
     spectral,
-    hht
+    hht,
+    EMD,
+    xplot
 Depends: 
     R (>= 3.5)
 LazyData: true
