--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(buildTS)
 export(getIM)
 import(data.table)
+importFrom(EMD,emd)
 importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(digest,digest)
+importFrom(hht,CEEMD)
 importFrom(pracma,detrend)
 importFrom(purrr,map)
 importFrom(seewave,ffilter)
