--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ importFrom(data.table,is.data.table)
 importFrom(data.table,melt)
 importFrom(digest,digest)
 importFrom(hht,CEEMD)
+importFrom(hht,EEMD)
+importFrom(hht,EEMDCompile)
 importFrom(pracma,detrend)
 importFrom(purrr,map)
 importFrom(seewave,ffilter)
