--- a/lib/NAMESPACE
+++ b/lib/NAMESPACE
@@ -5,6 +5,7 @@ export(buildIMF)
 export(buildPSA)
 export(buildTS)
 export(getIM)
+export(set_DIR)
 export(smoothSpectra)
 import(data.table)
 import(expm)
