--- a/lib/NAMESPACE
+++ b/lib/NAMESPACE
@@ -5,6 +5,7 @@ export(build_FFT)
 export(build_PSA)
 export(build_TS)
 export(map_OCID)
+export(remove_IMF)
 export(smooth_Spectra)
 import(data.table)
 import(expm)
@@ -17,6 +18,7 @@ importFrom(digest,digest)
 importFrom(hht,CEEMD)
 importFrom(hht,EEMD)
 importFrom(hht,EEMDCompile)
+importFrom(pracma,detrend)
 importFrom(purrr,map)
 importFrom(seewave,ffilter)
 importFrom(seewave,istft)
