--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,10 @@
 export(build_FFT)
 export(build_SDOF)
 export(build_TS)
+export(get_Intensity)
+export(get_Newmark)
 export(get_Spectra)
 export(get_imf)
-export(get_nd)
 export(map_OCID)
 export(remove_IMF)
 export(smooth_Spectra)
