--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_FFT)
 export(build_SDOF)
 export(build_TS)
 export(get_Intensity)
+export(get_ND)
 export(get_Newmark)
 export(get_Spectra)
 export(get_imf)
