--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_ND)
 export(get_Newmark)
 export(get_Spectra)
 export(get_imf)
+export(get_kmax)
 export(map_OCID)
 export(remove_IMF)
 export(smooth_Spectra)
