--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ importFrom(stats,convolve)
 importFrom(stats,dnorm)
 importFrom(stats,fft)
 importFrom(stats,filter)
+importFrom(stats,lm)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,smooth.spline)
