fix PSA (not tested)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(hht,CEEMD)
 importFrom(hht,EEMD)
 importFrom(hht,EEMDCompile)
 importFrom(pracma,detrend)
+importFrom(pracma,pinv)
 importFrom(purrr,map)
 importFrom(seewave,ffilter)
 importFrom(seewave,istft)
